--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ja">
 <head>
+    <meta kositakku>
     <meta charset="utf-8"/>
     <title></title>
     <link rel="stylesheet" href=""/>
