--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         <link rel="stylesheet" type="text/css" href="./css/main.css" />
         <link rel="stylesheet" type="text.css" hrep="./css/jquery.fullPage.css" />
     </head>
-   
-
-
- <body class="container"id = "i">
+    <body class="container">
         <div id="fullpage">
             <section class="section" id="top">
                 <h1>松永プロジェクト2017</h1>
