--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="ja">
-
 <head>
-  <meta charset="utf-8" />
-  <title></title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-  <script src="js/vendors/jquery.easings.min.js"></script>
-  <script src="js/jquery.fullPage.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
-
-
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <script src="js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/jquery.fullPage.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/base.css">
-  <!-- このcssは自作しますた。こっちに指示描く感じで-->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.fullPage.min.js"></script>
   <script src="js/base.js"></script>
-
+  <title>松永2017</title>
 </head>
-
 <body>
   <ul id="myMenu">
     <li data-menuanchor="topPage" id="first"><a href="#topPage">トップ</a></li>
@@ -28,10 +22,7 @@
     <li data-menuanchor="fourthPage"><a href="#fourthPage">Twitter</a></li>
   </ul>
   <div id="mov"><img src="image/move.gif" id="switch"></div>
-
-
   <div id="fullpage">
-
     <div class="section">
       <div class="contain">
         <img src="image/puzzle01.jpg" id="top_back" />
@@ -41,17 +32,11 @@
         </div>
       </div>
     </div>
-
-
     <div class="section">
-
       <div id="pro">
-
         <div id="hasira01">
-
         </div>
         <div class="container container-fluid">
-
           <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">プロジェクト概要</h2>
           <div class="col-xs-10 col-sm-6 col-md-6 col-lg-6 box" style="height: 200px;">
             <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
@@ -65,16 +50,12 @@
           <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 box" style="height: 430px;">
             <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。<br>これらの能力（プログラミング的思考）を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
           </div>
-
-
         </div>
-
       </div>
     </div>
     <div class="section" id="02">
       <div id="contents">
         <div id="hasira02">
-
         </div>
         <div class="container">
           <h2>コンテンツ</h2>
@@ -97,11 +78,9 @@
       </div>
     </div>
     <div class="section" id="03">
-
       <div id="member">
         <div id="hasira03">
         </div>
-
         <div class="container">
           <div id="member">
             <h2>メンバー</h2>
@@ -109,7 +88,6 @@
               <p>松永賢次</p>
               <p style="font-size: 0.8em; width: 160px; margin: 10px auto;">ネットワーク情報学部教授</p>
             </div>
-
             <div class="who"><img alt="" src="image/icon.jpg">
               <p>峯岸朋弥</p>
               <p style="font-size: 0.8em; width: 160px; margin: 10px auto;">SD NS プロジェクト代表</p>
@@ -146,7 +124,6 @@
               <p>一ノ瀬早紀</p>
               <p style="font-size: 0.8em; width: 40px; margin: 10px auto;">IxD CD</p>
             </div>
-
           </div>
         </div>
       </div>
@@ -157,38 +134,10 @@
       <div id="twi">
         <a class="twitter-timeline" href="https://twitter.com/mtngP_2017" data-height="800px">Tweets by mtngP_2017</a>
         <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
       </div>
-
       <div id="hasira05">
       </div>
     </div>
   </div>
-
-
 </body>
-
-<script>
-  $(function() {
-    $('#fullpage').fullpage({
-      verticalCentered: false,
-      anchors: ['topPage', 'firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'lastPage'],
-      menu: '#myMenu',
-    });
-  });
-
-  $(function() {
-    $('a[href^=#]').click(function() {
-      var speed = 500;
-      var href = $(this).attr("href");
-      var target = $(href === "#" || href === "" ? 'html' : href);
-      var position = target.offset().top;
-      $("html, body").animate({
-        scrollTop: position
-      }, speed, "swing");
-      return false;
-    });
-  });
-</script>
-
 </html>
