タイトル修正

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.fullPage.min.js"></script>
   <script src="js/base.js"></script>
-  <title>松永2017</title>
+  <title>松永プロジェクト2017</title>
 </head>
 <body>
   <ul id="myMenu">
