プロフィール修正

--- a/web/index.html
+++ b/web/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="who"><img alt="" src="image/icon.jpg">
               <p>宮崎龍一</p>
-              <p style="font-size: 0.8em; width: 50px; margin: 10px auto;">SD NS(?)</p>
+              <p style="font-size: 0.8em; width: 50px; margin: 10px auto;">SD NS</p>
             </div>
             <div class="who"><img alt="" src="image/icon.jpg">
               <p>一ノ瀬早紀</p>
