--- a/c_team/stage/demo/demo.html
+++ b/c_team/stage/demo/demo.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="../../lib/bootstrap-3-3-7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../..//css/base.css">
   <script src="../../lib/enchant/enchant.js"></script>
+  <script src="../../lib/enchant/plugins/mixing.enchant.js"></script>
+  <script src="../../lib/enchant/plugins/ui.enchant.js"></script>
   <script src="../../js/demo.js"></script>
   <title>松永プロジェクト2017</title>
 </head>
