２回目の変更テスト

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -88,6 +88,12 @@
 		<p>メンバー名</p>
 		<p>説明</p>
 	</div>
+
+	<div class="members">
+		<center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+		<p>メンバー名</p>
+		<p>説明</p>
+	</div>
 	<div class="members">
 		<center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
 		<p>メンバー名</p>
