クラスをファイルに分割

--- a/c_team/stage/demo/demo.html
+++ b/c_team/stage/demo/demo.html
@@ -9,6 +9,9 @@
   <script src="../../lib/enchant/enchant.js"></script>
   <script src="../../lib/enchant/plugins/mixing.enchant.js"></script>
   <script src="../../lib/enchant/plugins/ui.enchant.js"></script>
+  <script src="../../js/player.js"></script>
+  <script src="../../js/move_controller.js"></script>
+  <script src="../../js/map_object.js"></script>
   <script src="../../js/demo.js"></script>
   <title>松永プロジェクト2017</title>
 </head>
