--- a/c_team/stage/demo/demo.html
+++ b/c_team/stage/demo/demo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../../lib/bootstrap-3-3-7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../..//css/base.css">
+  <script src="../../lib/store/store.modern.min.js"></script>
   <script src="../../lib/enchant/enchant.js"></script>
   <script src="../../lib/enchant/plugins/mixing.enchant.js"></script>
   <script src="../../lib/enchant/plugins/ui.enchant.js"></script>
