--- a/c_team/stage/demo/demo.html
+++ b/c_team/stage/demo/demo.html
@@ -12,6 +12,7 @@
   <script src="../../js/player.js"></script>
   <script src="../../js/move_controller.js"></script>
   <script src="../../js/map_object.js"></script>
+  <script src="../../js/button_controller.js"></script>
   <script src="../../js/demo.js"></script>
   <title>松永プロジェクト2017</title>
 </head>
