css, jsフォルダを作成、各ファイルを適切なフォルダに移動

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -65,7 +65,7 @@
 
   <div id="member">
     <h2>メンバー紹介</h2>
-    <center><img src="001.svg" width="300px" id="svg" /></center>
+    <center><img src="image/001.svg" width="300px" id="svg" /></center>
     <br>
     <center>
       <div class="members">
@@ -75,7 +75,7 @@
       </div>
     </center>
     <br>
-    <center><img src="001.svg" width="300px" id="svg" /></center>
+    <center><img src="image/001.svg" width="300px" id="svg" /></center>
     <div class="members col-xs-3 col-md-3 col-lg-3">
       <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
       <p>メンバー名</p>
