--- a/web_new/index.html
+++ b/web_new/index.html
@@ -5,140 +5,143 @@
   <title>松永プロ2017</title>
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="menu.css" />
+  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/menu.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <script src="./js/main.js"></script>
 </head>
-<div id="menu-box">
-  <div id="toggle"><a href="#">menu</a></div>
-  <ul id="menu" class="">
-    <li><a href="#">松永プロ2017</a></li>
-    <li><a href="#project">project</a></li>
-    <li><a href="#contents">contents</a></li>
-    <li><a href="#member">member</a></li>
-    <li><a href="#news">news</a></li>
-  </ul>
-</div>
-
 <body>
-  <div id="top">
-    <div id="title">
-      <h3>松永プロジェクト2017</h3>
-      <h1>遊んで身につけるプログラミング的思考</h1>
+  <div class="container">
+    <nav class="navbar-fixed-top">
+      <!-- <div id="toggle"><a href="#">menu</a></div> -->
+      <ul>
+        <li><a class="nav-button" href="#top">松永プロ2017</a></li>
+        <li><a class="nav-button" href="#project">project</a></li>
+        <li><a class="nav-button" href="#contents">contents</a></li>
+        <li><a class="nav-button" href="#member">member</a></li>
+        <li><a class="nav-button" href="#news">news</a></li>
+      </ul>
+    </nav>
+
+    <div class="content-head" id="top">
+      <div id="title">
+        <h3>松永プロジェクト2017</h3>
+        <h1>遊んで身につけるプログラミング的思考</h1>
+        <center>
+          <img src="image/piyo00.png" alt="ロゴがきます" width="40%" />
+        </center>
+      </div>
+      <div id="start">
+        <center>
+          <button class="btn-warning btn-lg">START</button>
+        </center>
+      </div>
+    </div>
+
+    <div class="content-head" id="project">
+      <h2>プロジェクト概要</h2>
+      <div class="contain">
+        <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
+        <center><img alt="画像" src="image/piyo00.png" width="50%"></center>
+        <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
+      </div>
+
+    </div>
+
+    <div class="content-head" id="contents">
+      <h2>コンテンツ紹介</h2>
+      <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
+        <h3>ボードゲーム</h3>
+        <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
+        <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
+      </div>
+      <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-2 col-md-offset-1 col-lg-offset-1">
+        <h3>webゲーム</h3>
+        <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
+        <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
+
+      </div>
+    </div>
+
+    <div class="content-head" id="member">
+      <h2>メンバー紹介</h2>
+      <center><img src="image/001.svg" width="300px" id="svg" /></center>
+      <br>
       <center>
-        <img src="image/piyo00.png" alt="ロゴがきます" width="40%" />
+        <div class="members">
+          <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+          <p>メンバー名</p>
+          <p>説明</p>
+        </div>
       </center>
-    </div>
-    <div id="start">
-      <center>
-        <button class="btn-warning btn-lg">START</button>
-      </center>
-    </div>
-  </div>
-
-  <div id="project">
-    <h2>プロジェクト概要</h2>
-    <div class="contain">
-      <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
-      <center><img alt="画像" src="image/piyo00.png" width="50%"></center>
-      <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
-    </div>
-
-  </div>
-
-  <div id="contents">
-    <h2>コンテンツ紹介</h2>
-    <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
-      <h3>ボードゲーム</h3>
-      <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
-      <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
-    </div>
-    <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-2 col-md-offset-1 col-lg-offset-1">
-      <h3>webゲーム</h3>
-      <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
-      <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
-
-    </div>
-  </div>
-
-  <div id="member">
-    <h2>メンバー紹介</h2>
-    <center><img src="image/001.svg" width="300px" id="svg" /></center>
-    <br>
-    <center>
-      <div class="members">
+      <br>
+      <center><img src="image/001.svg" width="300px" id="svg" /></center>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
         <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-    </center>
-    <br>
-    <center><img src="image/001.svg" width="300px" id="svg" /></center>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
+
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
+      <div class="members col-xs-3 col-md-3 col-lg-3">
+        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <p>メンバー名</p>
+        <p>説明</p>
+      </div>
     </div>
 
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
+    <div class="content-head" id="news">
+      <h2>ニュース</h2>
+      <div id="newses">
+        <p>Twitter</p>
+        <a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/mtngP_2017" 　width="100%" height="400px">Tweets by mtngP_2017</a>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </div>
 
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-    <div class="members col-xs-3 col-md-3 col-lg-3">
-      <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
-      <p>メンバー名</p>
-      <p>説明</p>
-    </div>
-  </div>
-  <div id="news">
-    <h2>ニュース</h2>
-    <div id="newses">
-      <p>Twitter</p>
-      <a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/mtngP_2017" 　width="100%" height="400px">Tweets by mtngP_2017</a>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-  </div>
-
-  <div id="foot">
-    <center><button class="btn-lg btn-warning">GOAL</button></center>
-    <center>
-      <p>松永プロジェクト</p>
-    </center>
+    <footer>
+      <center><button class="btn-lg btn-warning">GOAL</button></center>
+      <center>
+        <p>松永プロジェクト</p>
+      </center>
+    </footer>
   </div>
 </body>
 </html>
