--- a/web_new/index.html
+++ b/web_new/index.html
@@ -12,7 +12,7 @@
   <script src="./js/main.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <nav class="navbar-fixed-top">
       <!-- <div id="toggle"><a href="#">menu</a></div> -->
       <ul>
@@ -24,26 +24,24 @@
       </ul>
     </nav>
 
-    <div class="content-head" id="top">
+    <header class="content-head" id="top">
       <div id="title">
-        <h3>松永プロジェクト2017</h3>
-        <h1>遊んで身につけるプログラミング的思考</h1>
-        <center>
-          <img src="image/piyo00.png" alt="ロゴがきます" width="40%" />
-        </center>
+        <h3 class="text-center">松永プロジェクト2017</h3>
+        <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
+          <img class="position-center display-block" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
       </div>
       <div id="start">
-        <center>
-          <button class="btn-warning btn-lg">START</button>
-        </center>
+        <p>
+          START
+        </p>
       </div>
-    </div>
+    </header>
 
     <div class="content-head" id="project">
       <h2>プロジェクト概要</h2>
       <div class="contain">
         <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
-        <center><img alt="画像" src="image/piyo00.png" width="50%"></center>
+        <img alt="画像" src="image/piyo00.png" width="50%">
         <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
       </div>
 
@@ -53,12 +51,12 @@
       <h2>コンテンツ紹介</h2>
       <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
         <h3>ボードゲーム</h3>
-        <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
+        <img alt="写真" src="image/piyo00.png" width="40%">
         <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
       </div>
       <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-2 col-md-offset-1 col-lg-offset-1">
         <h3>webゲーム</h3>
-        <center><img alt="写真" src="image/piyo00.png" width="40%"></center>
+        <img alt="写真" src="image/piyo00.png" width="40%">
         <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
 
       </div>
@@ -66,62 +64,62 @@
 
     <div class="content-head" id="member">
       <h2>メンバー紹介</h2>
-      <center><img src="image/001.svg" width="300px" id="svg" /></center>
+      <img src="image/001.svg" width="300px" id="svg" />
       <br>
-      <center>
+
         <div class="members">
-          <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+          <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
           <p>メンバー名</p>
           <p>説明</p>
         </div>
-      </center>
+
       <br>
-      <center><img src="image/001.svg" width="300px" id="svg" /></center>
+      <img src="image/001.svg" width="300px" id="svg" />
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
       <div class="members col-xs-3 col-md-3 col-lg-3">
-        <center><img alt="メンバーの写真" src="image/piyo00.png" width="80%" height=""></center>
+        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
@@ -137,10 +135,10 @@
     </div>
 
     <footer>
-      <center><button class="btn-lg btn-warning">GOAL</button></center>
-      <center>
+      <button class="btn-lg btn-warning">GOAL</button>
+
         <p>松永プロジェクト</p>
-      </center>
+
     </footer>
   </div>
 </body>
