STARTとGOALの装飾を統一

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -30,7 +30,7 @@
         <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
           <img class="position-center display-block" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
       </div>
-      <div id="start">
+      <div class="button-orange">
         <p>
           START
         </p>
@@ -135,7 +135,11 @@
     </div>
 
     <footer>
-      <button class="btn-lg btn-warning">GOAL</button>
+      <div class="button-orange">
+        <p>
+          GOAL
+        </p>
+        </div>
 
         <p>松永プロジェクト</p>
 
