メンバー紹介の修正, カラー設定をセーフカラーに変更

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -49,12 +49,12 @@
 
     <div class="content-head" id="contents">
       <h2>コンテンツ紹介</h2>
-      <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
+      <div class="product">
         <h3>ボードゲーム</h3>
         <img alt="写真" src="image/piyo00.png" width="40%">
         <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
       </div>
-      <div class="product col-xs-4 col-md-3 col-lg-3 col-xs-offset-2 col-md-offset-1 col-lg-offset-1">
+      <div class="product">
         <h3>webゲーム</h3>
         <img alt="写真" src="image/piyo00.png" width="40%">
         <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
@@ -64,65 +64,65 @@
 
     <div class="content-head" id="member">
       <h2>メンバー紹介</h2>
-      <img src="image/001.svg" width="300px" id="svg" />
+      <!-- <img src="image/001.svg" width="300px" class="svg" /> -->
       <br>
 
-        <div class="members">
-          <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
+        <div class="member-data">
+          <img alt="メンバーの写真" src="image/piyo00.png" class="member-photo">
           <p>メンバー名</p>
           <p>説明</p>
         </div>
 
       <br>
-      <img src="image/001.svg" width="300px" id="svg" />
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <!-- <img src="image/001.svg" width="300px" class="svg" /> -->
+      <!-- <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
 
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
       </div>
-      <div class="members col-xs-3 col-md-3 col-lg-3">
+      <div class="members">
         <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
         <p>メンバー名</p>
         <p>説明</p>
-      </div>
+      </div> -->
     </div>
 
     <div class="content-head" id="news">
