--- a/web_new/index.html
+++ b/web_new/index.html
@@ -28,7 +28,7 @@
       <div id="title">
         <h3 class="text-center">松永プロジェクト2017</h3>
         <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
-          <img class="position-center display-block" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
+          <img class="position-center" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
       </div>
       <div class="button-orange">
         <p>
@@ -37,100 +37,109 @@
       </div>
     </header>
 
-    <div class="content-head" id="project">
+    <div class="row">
       <h2>プロジェクト概要</h2>
-      <div class="contain">
+      <div class="content-head col-xs-offset-1 col-xs-10" id="project">
         <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
-        <img alt="画像" src="image/piyo00.png" width="50%">
+        <img alt="画像" src="image/piyo00.png">
         <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
       </div>
-
     </div>
 
-    <div class="content-head" id="contents">
+    <div class="row">
       <h2>コンテンツ紹介</h2>
-      <div class="product">
-        <h3>ボードゲーム</h3>
-        <img alt="写真" src="image/piyo00.png" width="40%">
-        <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
-      </div>
-      <div class="product">
-        <h3>webゲーム</h3>
-        <img alt="写真" src="image/piyo00.png" width="40%">
-        <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
-
+      <div class="content-head col-xs-offset-1 col-xs-10" id="contents">
+        <div class="row">
+          <div class="product col-xs-12 col-md-6">
+            <h3>ボードゲーム</h3>
+            <img alt="写真" src="image/piyo00.png">
+            <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
+          </div>
+          <div class="product col-xs-12 col-md-6">
+            <h3>webゲーム</h3>
+            <img alt="写真" src="image/piyo00.png">
+            <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="content-head" id="member">
+    <div class="row">
       <h2>メンバー紹介</h2>
-      <!-- <img src="image/001.svg" width="300px" class="svg" /> -->
-      <br>
-
-        <div class="member-data">
-          <img alt="メンバーの写真" src="image/piyo00.png" class="member-photo">
-          <p>メンバー名</p>
-          <p>説明</p>
+      <div class="content-head col-xs-offset-1 col-xs-10" id="member">
+        <!-- <img src="image/001.svg" width="300px" class="svg" /> -->
+        <div class="row">
+          <div class="member-data col-md-offset-3 col-md-6">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
         </div>
 
-      <br>
-      <!-- <img src="image/001.svg" width="300px" class="svg" /> -->
-      <!-- <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
+        <div class="row">
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+        </div>
 
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
+        <div class="row">
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+        </div>
 
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
+        <div class="row">
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+          <div class="member-data col-md-4">
+            <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
+            <p>メンバー名</p>
+            <p>説明</p>
+          </div>
+        </div>
       </div>
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
-
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div>
-      <div class="members">
-        <img alt="メンバーの写真" src="image/piyo00.png" width="80%" height="">
-        <p>メンバー名</p>
-        <p>説明</p>
-      </div> -->
     </div>
 
-    <div class="content-head" id="news">
+    <div class="row">
       <h2>ニュース</h2>
-      <div id="newses">
-        <p>Twitter</p>
-        <a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/mtngP_2017" 　width="100%" height="400px">Tweets by mtngP_2017</a>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="content-head col-xs-offset-1 col-xs-10" id="news">
+        <div id="newses">
+          <p>Twitter</p>
+          <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 100%; height: 1051.41px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px;" data-widget-id="profile:mtngP_2017" title="Twitter Timeline"></iframe>
+          <script async="" src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
       </div>
     </div>
 
