タイトルテキストの色変更, プロジェクト概要の表示修正

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -25,23 +25,23 @@
       </nav>
     </div>
 
-      <header class="content-head" id="top">
-        <div id="title">
-          <h3 class="text-center">松永プロジェクト2017</h3>
-          <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
-            <img class="position-center" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
-        </div>
-        <div class="button-orange">
-          <p>
-            START
-          </p>
-        </div>
-      </header>
+    <header class="content-head" id="top">
+      <div id="title">
+        <h3 class="text-center">松永プロジェクト2017</h3>
+        <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
+          <img class="position-center" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
+      </div>
+      <div class="button-orange">
+        <p>
+          START
+        </p>
+      </div>
+    </header>
 
     <div class="container-fluid">
       <div class="row content-head">
         <h2>プロジェクト概要</h2>
-        <div class="col-xs-offset-1 col-xs-10" id="project">
+        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8" id="project">
           <p>このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。</p>
           <img alt="画像" src="image/piyo00.png">
           <p>私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。</p>
@@ -79,72 +79,65 @@
               </div>
             </div>
           </div>
-
-          <img src="image/student.svg" class="if_icon" alt="教員" />
+          <img src="image/student.svg" class="if_icon" alt="生徒" />
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
                 <p>説明</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
               <div class="member-data">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
@@ -160,8 +153,7 @@
         <div class="col-xs-offset-1 col-xs-10" id="news">
           <div id="newses">
             <p>Twitter</p>
-            <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 100%; height: 1051.41px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px;" data-widget-id="profile:mtngP_2017" title="Twitter Timeline"></iframe>
-            <script async="" src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/mtngP_2017"　width="100%" height="400px">Tweets by mtngP_2017</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
       </div>
