モバイルでの余白を確保

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
       <div class="row content-head">
         <h2>プロジェクト概要</h2>
-        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8" id="project">
+        <div class="col-sm-offset-2 col-sm-8" id="project">
           <div class="content-border">
             <p>
               このプロジェクトは2020年の学習指導要領改訂でのプログラミング必修化に合わせ、ゲームの中でプログラミング的思考を目的としたコンテンツの企画・制作を行なっています。遊んでいる感覚で論理的思考や創造力を育てられる、そんなコンテンツの完成を目標に日々活動しています。
@@ -57,7 +57,7 @@
 
       <div class="row content-head">
         <h2>コンテンツ紹介</h2>
-        <div class="col-xs-offset-1 col-xs-10" id="contents">
+        <div class="col-md-offset-1 col-md-10" id="contents">
           <div class="row">
             <div class="product col-xs-12 col-md-6">
               <div class="content-border">
@@ -80,9 +80,9 @@
       <div class="row content-head">
         <h2>メンバー紹介</h2>
         <img src="image/teacher.svg" class="if_icon" alt="教員" />
-        <div class="col-xs-offset-1 col-xs-10" id="member">
+        <div class="col-md-offset-1 col-md-10" id="member">
           <div class="row">
-            <div class="col-md-offset-3 col-md-6">
+            <div class="col-xs-12 col-md-offset-3 col-md-6">
               <div class="member-data content-border">
                 <img alt="メンバーの写真" src="image/mem_icon.svg" class="member-photo">
                 <p>メンバー名</p>
@@ -161,7 +161,7 @@
 
       <div class="row content-head">
         <h2>ニュース</h2>
-        <div class="col-xs-offset-1 col-xs-10" id="news">
+        <div class="col-md-offset-1 col-md-10" id="news">
           <div id="newses">
             <div class="row">
               <div class="col-xs-12 col-md-offset-3 col-md-6">
