ボタンの入れ替え, ナビゲーションの色調整

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -7,16 +7,16 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" />
-    <!-- <link rel="stylesheet" href="./css/menu.css" /> -->
+    <link rel="stylesheet" href="./css/menu.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
   </head>
   <body>
     <div class="container-fluid">
-      <nav class="navbar navbar-default navbar-fixed-top">
+      <nav class="navbar navbar-default navbar-default-blue navbar-fixed-top">
         <div class="navbar-header">
-    			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+    			<button type="button" class="navbar-toggle navbar-toggle-blue collapsed" data-toggle="collapse" data-target="#navigation">
     				<span class="sr-only">Toggle navigation</span>
     				<span class="icon-bar"></span>
     				<span class="icon-bar"></span>
@@ -39,11 +39,7 @@
       <h3 class="text-center">松永プロジェクト2017</h3>
       <h1 class="text-center">遊んで身につけるプログラミング的思考</h1>
       <img class="position-center" src="image/piyo00.png" alt="松永プロジェクトロゴ" />
-      <div class="button-orange triangle-down">
-        <p>
-          START
-        </p>
-      </div>
+      <img class="position-center nav-triangle" src="image/elgnairt.svg" alt="下三角" />
     </header>
 
     <div class="container-fluid">
@@ -184,12 +180,8 @@
     </div>
 
     <footer>
-      <div class="button-orange">
-        <p>
-          GOAL
-        </p>
-        </div>
-        <p>松永プロジェクト</p>
+      <img class="position-center nav-triangle" src="image/triangle.svg" alt="三角" />
+      <p>松永プロジェクト</p>
     </footer>
   </body>
 </html>
