ロゴを追加

--- a/web_new/_index.html
+++ b/web_new/_index.html
@@ -22,7 +22,7 @@
     <div class="head">
       <h3>松永プロジェクト2017</h3>
       <h1>遊んで身につけるプログラミング的思考</h1>
-      <img src="image/piyo00.png" alt="松永プロジェクトロゴ" />
+      <img src="image/logo.svg" alt="松永プロジェクトロゴ" />
       <img src="image/elgnairt.svg" class="triangle" alt="下三角" />
     </div>
 
@@ -113,7 +113,7 @@
     <h2>ニュース</h2>
     <div class="content twitter">
       <p>Twitter</p>
-      <a data-tweet-limit="5" href="https://twitter.com/mtngP_2017">
+      <a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/mtngP_2017">
         Tweets by mtngP_2017
       </a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
