脱フレームワーク

--- a/web_new/_index.html
+++ b/web_new/_index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>松永プロ2017</title>
 
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v2.3.4/dist/mini-default.min.css">
     <link rel="stylesheet" href="./css/_main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/_main.js"></script>
   </head>
   <body>
-    <header class="sticky">
-      <a class="button nav-bt">松永プロ2017</a>
-      <a class="button nav-bt">project</a>
-      <a class="button nav-bt">contents</a>
-      <a class="button nav-bt">member</a>
-      <a class="button nav-bt">news</a>
-    </header>
+    <nav>
+      <a class="title">松永プロ2017</a>
+      <a class="nav-bt">TOP</a>
+      <a class="nav-bt">project</a>
+      <a class="nav-bt">contents</a>
+      <a class="nav-bt">member</a>
+      <a class="nav-bt">news</a>
+    </nav>
 
-    <div class="head">
+    <header>
       <h3>松永プロジェクト2017</h3>
       <h1>遊んで身につけるプログラミング的思考</h1>
-      <img src="image/logo.svg" alt="松永プロジェクトロゴ" />
+      <img src="image/logo.svg" class="logo" alt="松永プロジェクトロゴ" />
       <img src="image/elgnairt.svg" class="triangle" alt="下三角" />
-    </div>
+    </header>
 
     <h2>プロジェクト概要</h2>
     <div class="content">
@@ -53,8 +53,8 @@
 
     <h2>メンバー紹介</h2>
     <img src="image/teacher.svg" class="diamond" alt="教員" />
-    <div class="flex-box member">
-      <div class="teacher-data">
+    <div class="flex-box">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>松永 賢次</p>
         <p>担当教員</p>
@@ -62,48 +62,48 @@
     </div>
 
     <img src="image/student.svg" class="diamond" alt="生徒" />
-    <div class="member">
-      <div class="member-data">
+    <div class="flex-box">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>峯岸 朋弥</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>一之瀬 早紀</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>小原 拓哉</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>小金井 美里</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>越川 拓実</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>齋藤 陸弥</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>宮﨑 龍一</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>諸星 南菜</p>
         <p>説明</p>
       </div>
-      <div class="member-data">
+      <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>山下 修平</p>
         <p>説明</p>
