メンバーの左寄せ対応, 他

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <img src="image/student.svg" class="diamond" alt="生徒" />
-    <div class="flex-box">
+    <div class="flex-box left-flex">
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>峯岸 朋弥</p>
