ファンキーな動きを修正

--- a/web_new/index.html
+++ b/web_new/index.html
@@ -13,11 +13,15 @@
   <body>
     <nav>
       <a class="title">松永プロ2017</a>
-      <a class="nav-bt">TOP</a>
-      <a class="nav-bt">project</a>
-      <a class="nav-bt">contents</a>
-      <a class="nav-bt">member</a>
-      <a class="nav-bt">news</a>
+      <span>
+        <ul>
+          <li><a class="nav-bt">TOP</a></li>
+          <li><a class="nav-bt">project</a></li>
+          <li><a class="nav-bt">contents</a></li>
+          <li><a class="nav-bt">member</a></li>
+          <li><a class="nav-bt">news</a></li>
+        </ul>
+      </span>
     </nav>
 
     <header>
@@ -67,47 +71,47 @@
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>峯岸 朋弥</p>
-        <p>説明</p>
+        <p>SD - NS</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>一之瀬 早紀</p>
-        <p>説明</p>
+        <p>IxD - CD</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>小原 拓哉</p>
-        <p>説明</p>
+        <p>IxD - SI</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>小金井 美里</p>
-        <p>説明</p>
+        <p>IxD - CD</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>越川 拓実</p>
-        <p>説明</p>
+        <p>IxD - CD</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>齋藤 陸弥</p>
-        <p>説明</p>
+        <p>SD - NS</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>宮﨑 龍一</p>
-        <p>説明</p>
+        <p>SD - NS</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>諸星 南菜</p>
-        <p>説明</p>
+        <p>IxD - IB</p>
       </div>
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>山下 修平</p>
-        <p>説明</p>
+        <p>IxD - IS</p>
       </div>
     </div>
 
