--- a/web_new/index.html
+++ b/web_new/index.html
@@ -67,12 +67,15 @@
     </div>
 
     <img src="image/student.svg" class="diamond" alt="生徒" />
-    <div class="flex-box left-flex">
+    <div class="flex-box">
       <div class="personal-data">
-        <img alt="メンバーの写真" src="image/mem_icon.svg" >
+        <img alt="メンバーの写真" src="image/mem_icon.svg">
         <p>峯岸 朋弥</p>
+        <p>代表</p>
         <p>SD - NS</p>
       </div>
+    </div>
+    <div class="flex-box left-flex">
       <div class="personal-data">
         <img alt="メンバーの写真" src="image/mem_icon.svg" >
         <p>一之瀬 早紀</p>
