画像差し替え

--- a/web/index.html
+++ b/web/index.html
@@ -46,12 +46,12 @@
     <div class="flex-box">
       <div class="content">
         <h3>ボードゲーム</h3>
-        <img alt="写真" src="image/piyo00.png">
+        <img alt="写真" src="image/board.png">
         <p>料理を作るためにおつかいへ。早く料理を作るにはどのようにプログラムを組めばいいかな?</p>
       </div>
       <div class="content">
         <h3>webゲーム</h3>
-        <img alt="写真" src="image/piyo00.png">
+        <img alt="写真" src="image/custom.png">
         <p>童話の主人公をプログラムで動かすゲーム。実行した結果で物語の展開が変わる?</p>
       </div>
     </div>
